pulsar/pulsar-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulsar-dashboard
  labels:
    app: pulsar-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pulsar-dashboard
  template:
    metadata:
      labels:
        app: pulsar-dashboard
    spec:
      containers:
        - name: pulsar-dashboard
          image: apachepulsar/pulsar-dashboard:latest
          resources: {}
      restartPolicy: Always
