pulsar/pulsar-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pulsar-dashboard
  labels:
    app: pulsar-dashboard
spec:
  selector:
    app: pulsar-dashboard
  ports:
    - name: web
      port: 80
      targetPort: 80
