pulsar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pulsar
  labels:
    app: pulsar
spec:
  selector:
    app: pulsar
  ports:
    - name: pulsar
      port: 6650
      targetPort: 6650
    - name: http
      port: 8080
      targetPort: 8080
