pulsar/pulsar-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: pulsar-dashboard
spec:
  rules:
    - host: pulsar-dashboard.nuc.io
      http:
        paths:
          - path: /
            backend:
              serviceName: pulsar-dashboard
              servicePort: 80
